--- a/welcome.html
+++ b/welcome.html
@@ -167,13 +167,13 @@
         import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
         import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
         const firebaseConfig = {
-            apiKey: "AIzaSyCw7hwh4pEw6LGsjQLAJhv7onEUgkvp3zM",
-            authDomain: "sign-up-7a0de.firebaseapp.com",
-            projectId: "sign-up-7a0de",
-            storageBucket: "sign-up-7a0de.firebasestorage.app",
-            messagingSenderId: "152028111242",
-            appId: "1:152028111242:web:cc1853ad145dd237902873",
-            measurementId: "G-BDRMHYXR1Y"
+            apiKey: "",
+            authDomain: "",
+            projectId: "",
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: "",
+            measurementId: ""
         };
     
        
